[tool.poetry]
name = "code-caver"
version = "0.1.0"
description = ""
authors = ["a <a>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
ruff = "^0.2.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
